# rust-scudo

./: .gitmodules  Cargo.toml  README.md  abort_tests.sh  publish.sh  pull-scudo.sh
.github/workflows/: check.yml  publish.yml
examples/: global_allocator.rs
scudo/: Cargo.toml  README.md
scudo-proc-macros/: Cargo.toml  LICENSE.md  README.md
scudo-proc-macros/src/: lib.rs
scudo-proc-macros/tests/ui/: multiple_options_pass.rs  no_equal_fail.rs  no_equal_fail.stderr  no_ident_or_literal_fail.rs  no_ident_or_literal_fail.stderr  not_main_fail.rs  not_main_fail.stderr  single_option_pass.rs  wrong_seperator_fail.rs  wrong_seperator_fail.stderr
scudo-sys/: Cargo.toml  README.md  build.rs  pull-scudo.sh  scudo-standalone
scudo-sys/src/: lib.rs  scudo_rust_wrapper.cpp
scudo/examples/: global_allocator.rs
scudo/src/: lib.rs
src/: ffi.rs  global_allocator.rs  lib.rs
